<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/koonTyyppi"
            android:layout_width="240dp"
            android:layout_height="41dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="39dp"
            android:layout_weight="1"
            android:entries="@array/spinnerItems"
            android:spinnerMode="dropdown"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/koko" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="94dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="45dp"
            android:layout_weight="1"
            android:text="@string/tuoteKoonTyyppi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/koko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="39dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/nimi" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="109dp"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="39dp"
            android:layout_weight="1"
            android:text="@string/tuotteenKoko"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nimi" />

        <EditText
            android:id="@+id/nimi"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="51dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/tuotteenNimi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="27dp"
            android:layout_weight="1"
            android:text="@string/AloitusOtsikko"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:onClick="postaKaikki"
            android:text="Poista tuotteet muistista"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="126dp"
            android:layout_height="32dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="54dp"
            android:layout_weight="1"
            android:text="@string/luokka"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Spinner
            android:id="@+id/luokkia"
            android:layout_width="240dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_weight="1"
            android:entries="@array/luokat"
            android:spinnerMode="dropdown"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/koonTyyppi" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:onClick="lisaaTuote"
            android:text="@string/lisays"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:layout_editor_absoluteX="0dp" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation">

    </android.support.design.widget.BottomNavigationView>

</android.support.constraint.ConstraintLayout>